(env
  (dev
     (flags (:standard -warn-error -A))))

(library
 (public_name srt)
 (name srt)
 (c_names srt_generated_stubs)
 (c_library_flags "-lsrt") 
 (synopsis "Binding for the Secure, Reliable, Transport protocol library") 
 (libraries srt.stubs ctypes.stubs))

(rule
 (targets srt_generated_stubs.ml)
 (deps    (:gen ./generator/gen_stubs.exe))
 (action  (run %{gen} ml %{targets})))

(rule
 (targets srt_generated_stubs.c)
 (deps    (:gen ./generator/gen_stubs.exe))
 (action  (run %{gen} c %{targets})))

(rule
 (targets srt_top_level_generated_types.ml)
 (deps    (:gen ./generator/gen_types_c))
 (action  (system "%{gen} > %{targets}")))
