(library
 (public_name srt)
 (foreign_stubs
  (language c)
  (names srt_generated_stubs srt_generated_stubs_locked))
 (c_library_flags -lsrt)
 (synopsis "Binding for the Secure, Reliable, Transport protocol library")
 (libraries threads srt.stubs srt.stubs.locked ctypes.stubs))

(rule
 (targets srt_generated_stubs.ml)
 (action
  (run ./generator/gen_stubs.exe ml %{targets})))

(rule
 (targets srt_generated_stubs.c)
 (action
  (run ./generator/gen_stubs.exe c %{targets})))

(rule
 (targets srt_generated_stubs_locked.ml)
 (action
  (run ./generator/gen_stubs.exe ml %{targets} locked)))

(rule
 (targets srt_generated_stubs_locked.c)
 (action
  (run ./generator/gen_stubs.exe c %{targets} locked)))
